Refactor: organise project into a package and notebooks folder.
- Moved Python modules into a new build_dataset/ package
- Moved Jupyter notebooks to notebooks/ directory
- Renamed data_handling.py → combine_data.py
- Removed unused files: render.yaml, data_exploration.py

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "df_full = pd.read_csv('data/The_Dataset_v1-1.csv', parse_dates = [\"Date\"])\n",
+    "df_full = pd.read_csv('../data/The_Dataset_v1-1.csv', parse_dates = [\"Date\"])\n",
     "df = df_full.copy()\n",
     "# remove NAs\n",
     "df = df.dropna().copy()\n",
@@ -325,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Finally, add functions to \"data_cleaning.py\" to automatically do all the data cleaning in this notebook."
+    "# Finally, add functions to \"data_cleaning.py\" in \"build_dataset\" package to automatically do all the data cleaning in this notebook."
    ]
   }
  ],
