--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -22,7 +22,10 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "import data_cleaning"
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath('..'))\n",
+    "from build_dataset import data_cleaning"
    ]
   },
   {
@@ -32,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/The_Dataset_v1-1.csv', parse_dates = [\"Date\"])\n",
+    "df = pd.read_csv('../data/The_Dataset_v1-1.csv', parse_dates = [\"Date\"])\n",
     "df = data_cleaning.clean_dataset(df)\n",
     "df = data_cleaning.remove_systems(df)\n",
     "df = data_cleaning.weather_code_to_category(df)\n",
@@ -254,7 +257,7 @@
     "# 3. try removing the weather category dummy variables, not because it would improve the model, but because they are unimportant and would make the model simpler\n",
     "\n",
     "# Load dataset with elevation variable\n",
-    "df = pd.read_csv('data/The_Dataset_v1-2.csv', parse_dates = [\"Date\"])\n",
+    "df = pd.read_csv('../data/The_Dataset_v1-2.csv', parse_dates = [\"Date\"])\n",
     "df = data_cleaning.clean_dataset(df)\n",
     "df = data_cleaning.remove_systems(df)\n",
     "df = data_cleaning.weather_code_to_category(df)\n",
