--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from datetime import datetime\n",
     "\n",
     "import joblib\n",
@@ -22,9 +23,6 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "import sys\n",
-    "import os\n",
-    "sys.path.append(os.path.abspath('..'))\n",
     "from build_dataset import data_cleaning"
    ]
   },
@@ -35,7 +33,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/The_Dataset_v1-1.csv', parse_dates = [\"Date\"])\n",
+    "package_dir = os.getcwd()\n",
+    "data_dir = os.path.abspath(os.path.join(package_dir, '..', 'data'))\n",
+    "data_file = os.path.join(data_dir, 'The_Dataset_v1-1.csv')\n",
+    "\n",
+    "df = pd.read_csv(data_file, parse_dates = [\"Date\"])\n",
     "df = data_cleaning.clean_dataset(df)\n",
     "df = data_cleaning.remove_systems(df)\n",
     "df = data_cleaning.weather_code_to_category(df)\n",
@@ -257,7 +259,8 @@
     "# 3. try removing the weather category dummy variables, not because it would improve the model, but because they are unimportant and would make the model simpler\n",
     "\n",
     "# Load dataset with elevation variable\n",
-    "df = pd.read_csv('../data/The_Dataset_v1-2.csv', parse_dates = [\"Date\"])\n",
+    "data_file2 = os.path.join(data_dir, 'The_Dataset_v1-2.csv')\n",
+    "df = pd.read_csv(data_file2, parse_dates = [\"Date\"])\n",
     "df = data_cleaning.clean_dataset(df)\n",
     "df = data_cleaning.remove_systems(df)\n",
     "df = data_cleaning.weather_code_to_category(df)\n",
